--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
                     </div>
                 </div>
                 <div class="main-content">
-                    <div class="container-menu">
+                    <div class="container-menu ps-3 ps-lg-2">
                       <!-- Main Menu -->
-                      <div class="row row-cols-md-3 flex-column flex-md-row justify-content-center align-items-center ps-3 ps-lg-2">
+                      <div class="row row-cols-md-3 flex-column flex-md-row justify-content-center align-items-center">
                             <div class="col col-lg-6 mb-4 mt-3">
                                 <div class="col d-flex align-items-center">
                                     <h2 class="pe-3">Boolean</h2>
@@ -230,8 +230,8 @@
                       </div>
                     </div>
                       <!-- Main Content -->
-                      <div class="container-content">
-                          <div class="row px-3 py-3">
+                      <div class="container-content px-3 py-3">
+                          <div class="row">
                               <div class="col-12 col-lg-9">
                                   <!-- Card Classes -->
                                   <div class="card mb-3">
